fixed bugs for Mobile: horizontal scroll and news is scrollable

--- a/cms-2022-main-project/project/src/sass/global.scss
+++ b/cms-2022-main-project/project/src/sass/global.scss
@@ -4,6 +4,13 @@
 a:link, a:visited, a:hover, a:active {
   text-decoration: none;
 }
+
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+  
+}
+
 body {
   font-family:'Source Sans Pro';
 }
