--- a/cms-2022-main-project/project/src/sass/layout/about.scss
+++ b/cms-2022-main-project/project/src/sass/layout/about.scss
@@ -2,7 +2,7 @@
     #about {
         
         background-color: #FFF7F2;
-        padding-bottom: 2rem;
+        padding-bottom: 3rem;
 
         img{
             margin-top: 3rem;
@@ -21,7 +21,6 @@
 
         .button{
             color: black;
-            margin-bottom: 3rem;
             margin-left: 1rem;
             font-size: 0.8rem;
         }
