--- a/cms-2022-main-project/project/src/sass/layout/news.scss
+++ b/cms-2022-main-project/project/src/sass/layout/news.scss
@@ -11,8 +11,9 @@
             display: flex;
             flex-direction: row;
             column-gap: 1rem;
-            overflow-x: hidden;
+            overflow-x: auto;
             padding: 1rem;
+            scroll-behavior: smooth;
         }
         
 
